@@ -5,40 +5,107 @@
   <artifactId>PoetryHookExampleAgent</artifactId>
   <version>1.0.0</version>
 
-  <build>
-    <plugins>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-jar-plugin</artifactId>
-        <version>3.3.0</version>
-        <configuration>
-          <includes>
-            <include>net/poetryhack/poetryhook/examples/exampleagent/**</include>
-          </includes>
-          <archive>
-            <manifestEntries>
-              <Agent-Class>net.poetryhack.poetryhook.examples.exampleagent.AgentMain</Agent-Class>
-              <Can-Retransform-Classes>true</Can-Retransform-Classes>
-            </manifestEntries>
-          </archive>
-        </configuration>
-      </plugin>
-      <plugin>
-        <groupId>org.codehaus.mojo</groupId>
-        <artifactId>exec-maven-plugin</artifactId>
-        <version>1.2.1</version>
-        <configuration>
-          <executable>java</executable>
-          <arguments>
-            <argument>-Djdk.attach.allowAttachSelf=true</argument>
-            <argument>-classpath</argument>
-            <classpath />
-            <argument>net.poetryhack.poetryhook.examples.exampleapp.AppMain</argument>
-          </arguments>
-        </configuration>
-      </plugin>
-    </plugins>
-  </build>
+  <profiles>
+    <profile>
+      <id>build-agent</id>
+      <build>
+        <plugins>
+          <!--
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-jar-plugin</artifactId>
+            <version>3.3.0</version>
+            <configuration>
+              <excludes>
+                <exclude>net/poetryhack/poetryhook/examples/exampleapp/**</exclude>
+              </excludes>
+              <archive>
+                <manifestEntries>
+                  <Agent-Class>net.poetryhack.poetryhook.examples.exampleagent.AgentMain</Agent-Class>
+                  <Can-Retransform-Classes>true</Can-Retransform-Classes>
+                </manifestEntries>
+              </archive>
+            </configuration>
+          </plugin>
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-assembly-plugin</artifactId>
+            <version>3.6.0</version>
+            <configuration>
+              <descriptorRefs>
+                <descriptorRef>jar-with-dependencies</descriptorRef>
+              </descriptorRefs>
+            </configuration>
+            <executions>
+              <execution>
+                <id>assemble-all</id>
+                <phase>package</phase>
+                <goals>
+                  <goal>single</goal>
+                </goals>
+              </execution>
+            </executions>
+          </plugin>
+          -->
+
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-shade-plugin</artifactId>
+            <version>3.6.0</version>
+            <executions>
+              <execution>
+                <phase>package</phase>
+                <goals>
+                  <goal>shade</goal>
+                </goals>
+                <configuration>
+                  <filters>
+                    <filter>
+                      <artifact>*:*</artifact>
+                      <excludes>
+                        <exclude>net/poetryhack/poetryhook/examples/exampleapp/**</exclude>
+                      </excludes>
+                    </filter>
+                  </filters>
+                  <transformers>
+                    <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
+                      <manifestEntries>
+                        <Agent-Class>net.poetryhack.poetryhook.examples.exampleagent.AgentMain</Agent-Class>
+                        <Can-Retransform-Classes>true</Can-Retransform-Classes>`
+                      </manifestEntries>
+                    </transformer>
+                  </transformers>
+                </configuration>
+              </execution>
+            </executions>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
+    <profile>
+      <id>build-app</id>
+      <build>
+        <plugins>
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-jar-plugin</artifactId>
+            <version>3.3.0</version>
+            <configuration>
+              <includes>
+                <include>net/poetryhack/poetryhook/examples/exampleapp/**</include>
+              </includes>
+              <finalName>PoetryHookExampleApp</finalName>
+              <archive>
+                <manifest>
+                  <mainClass>net.poetryhack.poetryhook.examples.exampleapp.AppMain</mainClass>
+                </manifest>
+              </archive>
+            </configuration>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
+  </profiles>
 
 
   <properties>
